tests/snapshots/cli_tests__help_output.snap
---
source: tests/cli_tests.rs
expression: stdout
---
Manage the Android Studio installations

Usage: astudios <COMMAND>

Commands:
  list       List all versions of Android Studio that are available to install
  download   Download a specific version of Android Studio
  install    Download and install a specific version of Android Studio
  uninstall  Uninstall a version of Android Studio
  use        Change the selected Android Studio
  installed  List the versions of Android Studio that are installed
  which      Show which version is currently selected
  update     Update the list of available versions of Android Studio
  open       Open a project with the currently selected Android Studio
  help       Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
