tests/snapshots/cli_tests__installed_help_output.snap
---
source: tests/cli_tests.rs
expression: stdout
---
Show currently installed versions

Usage: as-man installed

Options:
  -h, --help  Print help
