tests/snapshots/cli_tests__invalid_command_error.snap
---
source: tests/cli_tests.rs
expression: stderr
---
error: unrecognized subcommand 'invalid-command'

Usage: astudios <COMMAND>

For more information, try '--help'.
