tests/snapshots/cli_tests__update_help_output.snap
---
source: tests/cli_tests.rs
expression: stdout
---
Update the local releases cache

Usage: astudios update

Options:
  -h, --help  Print help
