tests/snapshots/cli_tests__use_help_output.snap
---
source: tests/cli_tests.rs
expression: stdout
---
Switch to a different Android Studio version

Usage: as-man use <VERSION>

Arguments:
  <VERSION>  Version to switch to

Options:
  -h, --help  Print help
