tests/snapshots/cli_tests__which_help_output.snap
---
source: tests/cli_tests.rs
expression: stdout
---
Show which version is currently active

Usage: as-man which

Options:
  -h, --help  Print help
